added proposal docs w org mode. Edits on cf

--- a/src/1-Intro/1-2_machine-learning/1-2_ml.tex
+++ b/src/1-Intro/1-2_machine-learning/1-2_ml.tex
@@ -1,5 +1,4 @@
-Broadly, machine learning is the process of algorithms ``learning'' from experience.
-
+One of the biggest limitations in historic forms of image processing and filtering is the need to create and tune the filter that are used for feature extraction. While this gives researchers an exceptional amount of control over the filtering techniques, this is often time consuming and difficult to generalize to new data.
 
 \input{src/1-Intro/1-2_machine-learning/nn-telos.tex}
 \input{src/1-Intro/1-2_machine-learning/neural-network-structure.tex}
