--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -3544,6 +3544,15 @@
   file = {/home/andrew/Zotero/storage/TFUN7KDX/Pandit et al. - 2005 - Influence of surface geometry and the cam-post mec.pdf}
 }
 
+@incollection{paszkePyTorchImperativeStyle2019,
+  title = {{{PyTorch}}: {{An}} Imperative Style, High-Performance Deep Learning Library},
+  booktitle = {Advances in Neural Information Processing Systems 32},
+  author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+  year = {2019},
+  pages = {8024--8035},
+  publisher = {{Curran Associates, Inc.}}
+}
+
 @article{patelThreedimensionalMRIAnalysis2004,
   title = {A Three-Dimensional {{MRI}} Analysis of Knee Kinematics},
   author = {Patel, Vikas V. and Hall, Katherine and Ries, Michael and Lotz, Jeff and Ozhinsky, Eugene and Lindsey, Colleen and Lu, Ying and Majumdar, Sharmila},
