--- a/proposal/jensen-pres.tex
+++ b/proposal/jensen-pres.tex
@@ -1,4 +1,4 @@
-% Created 2023-02-19 Sun 19:32
+% Created 2023-02-20 Mon 14:25
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
 \usepackage[utf8]{inputenc}
@@ -38,19 +38,14 @@
 
 
 \section{Introduction}
-\label{sec:org2b9237e}
-\begin{frame}[label={sec:org841db8f}]{This is the title of the next slide that I have}
+\label{sec:orgd827ada}
+\begin{frame}[label={sec:orgad2f780}]{This is the title of the next slide that I have}
 This is some writing that I am doing for my introduction
 CIter this
 Athis
 \end{frame}
 
-\begin{frame}[label={sec:org5dd7a2e}]{This is nother slide}
-\autocite{banksAccurateMeasurementThreedimensional1996}
-\autocites{banksAccurateMeasurementThreedimensional1996}[][]{jensenJointTrackMachine2022}[][]{cannyFindingEdgesLines1983}
-\end{frame}
-
-\begin{frame}[label={sec:orgbbf1ff8}]{Adding a slide with columns}
+\begin{frame}[label={sec:orgf143620}]{Adding a slide with columns}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 This is writing in a column
@@ -63,10 +58,9 @@ More writing in this column
 \item Adding yet another list to the item.
 \end{itemize}
 \end{column}
-
-\begin{column}{0.2\columnwidth}
-I want to write some more here
-\end{column}
 \end{columns}
+\end{frame}
+\begin{frame}[label={sec:org59c63e9}]{I want to add a slide here with some citations.}
+This is some talking with a citation\autocite{jensenJointTrackMachine2022}. I want to write a little bit afterward as well.
 \end{frame}
 \end{document}
