--- a/src/1-Intro/1-1_computer-vision-primer/image-similarity-metrics.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-similarity-metrics.tex
@@ -49,87 +49,16 @@ Feature based image similarity metrics involve some method of determining key fe
     \label{eq:wkp-error}
 \end{equation}
 
-Keypoints are particularly useful when there are invariant features in images and 3D models that will always be present. However, if these features will not, or cannot always be detected, then other measures must be utilized.
+Keypoints are particularly useful when there are invariant features in images and 3D models, like morphological aspects of bones. However, if these features will not, or cannot always be detected, then other measures must be utilized.
 
 \paragraph*{Edges as Features}
 Edges are a natural choice of feature when determining image similarity. Similar to intensity-based image similarity, the similarity between the contours of two images offers a promising metric for determining the overall similarity between two images. In model-image registration, the contours of the input image and the projected model can easily be compared, which presents a reliable scheme for measuring their similarity. When the edges are aligned, you can say that the model is \textit{properly registered} to the image. However, how can we determine when the edges are aligned?
 
 As always, the simplest approach is to take the p-norm between the model and image contours (\cref{eq:p-norm}), where instead of taking the difference between the two original images, one is taking the difference of the edges of the images. This function will be minimized when there is complete overlap between image and model contours.
 
+\paragraph{Drawback of Feature Based Similarity Metrics}
+While they can be much more informative and specific, the main drawback of feature based image similarity metrics is the need for feature selection and extraction from the input image. Historically, this required an immense amount of domain-specific knowledge, and the image processing used to extract those features was often relatively limited in scope.
 
-{
-  \Large{MOVE SYM TRAP SOMEWHERE ELSE}
-}
-\subsubsection{Symmetry Traps}
-Objects with rotational or mirror symmetry cause pathological solutions to many of the image similarity metrics when used for optimizing the pose of the object relative to the image. The simplest example of a symmetry trap can be posed as follows: given the shadow of a basketball, which direction was the logo facing? It is quickly apparent that this is an impossible question to answer with just the information given by the image and the 3D model. This problem arises when performing optimizing for the post of mediolaterally symmetric tibial implants. Additional information must be used to find the correct pose of the implant.
-
-However, with the knowledge of the direction of symmetry, it is possible to determine the ``dual pose'' of the current orientation, that is, the pose that produces indistinguishable projective geometry.
-
-\begin{mdframed}
-    \begin{center}
-        {\bf Algorithm for Determining the Dual-Pose of a Symmetric Object}
-    \end{center}
-\begin{enumerate}
-    \item Determine the viewing ray from camera $\rightarrow$ object (Eq. \ref{eq:view-ray}).
-    \item Determine the axis-angle ($m,\theta$) rotation between the viewing ray and the symmetric axis of the object (Eq. \ref{eq:angle-between}, \ref{eq:perp-axis}).
-    \item Rotate the object $-2\theta$ about the same axis, reflecting the rotation about the viewing ray (Eq. \ref{eq:equiv-axis-angle}).
-    \item The final orientation of the object is exactly the ``dual pose'', producing indistinguishable projective geometry (Eq. \ref{eq:rotation-matrix-mult}).
-\end{enumerate}
-\end{mdframed}
-
-\begin{equation}
-    \begin{aligned}
-        \text{If $T$ is the homogenous}& \text{ transformation matrix describing the object} \\
-        \vec{v}' &= T_{1:3,4} \\
-        \vec{v} & = \frac{\vec{v}'}{\|\vec{v}'\|}
-    \end{aligned}
-    \label{eq:view-ray}
-\end{equation}
-
-
-We can use trigonometry to determine the angle (Eq. \ref{eq:angle-between}) and perpindicular axis (Eq. \ref{eq:perp-axis}) between two vectors. For our example, we use the normalized viewing ray and the z-axis (symmetric axis) as the two vectors.
-\begin{equation}
-    \begin{aligned}
-        cos(\theta) &= \vec{v} \cdot \vec{z} \\
-        &\rightarrow \\
-        \theta &= arccos(\vec{v} \cdot \vec{z})
-    \end{aligned}
-    \label{eq:angle-between}
-\end{equation}
-
-\begin{equation}
-    \begin{aligned}
-        \vec{m} = \frac{\vec{v} \times \vec{z}}{\|\vec{v} \times \vec{z}\|}
-    \end{aligned}
-    \label{eq:perp-axis}
-\end{equation}
-
-Then, we can build a rotation matrix using an axis and an angle \cite{craneKinematicAnalysisRobot2008}, (Eq. \ref{eq:equiv-axis-angle}).
-
-\begin{equation}
-    \begin{aligned}
-        c &= cos(-2\theta)\\
-        s &= sin(-2\theta) \\
-        q &= -cos(-2\theta)\\
-        R_{3 \times 3} &= \begin{pmatrix}
-            m_x^2v + c & m_xm_yv - m_zs & m_x m_z v - m_y s \\ m_x m_y v + m_z s & m_y^2 v + c & m_y m_z v - m_x s \\ m_x m_z v - m_y s & m_y m_z v + m_x s & m_z^2 v + c
-        \end{pmatrix}
-    \end{aligned}
-    \label{eq:equiv-axis-angle}
-\end{equation}
-
-Then, we obtain the final transformation matrix describing the dual pose of the object by a post-multiplication of this rotation matrix.
-
-\begin{equation}
-    \begin{aligned}
-        T_{dual} = T_{orig} * \begin{pmatrix}
-            R_{3 \times 3} & \vec{0}_{3 \times 1} \\ \vec{0}_{1 \times 3} & 1
-        \end{pmatrix}
-    \end{aligned}
-    \label{eq:rotation-matrix-mult}
-\end{equation}
-
-Given these two matrices, further exploration can determine which is the correct pose, though this will have to be done using information not directly present in the image contours.
 
 %%% Local Variables:
 %%% mode: latex
