--- a/src/2-aims/2-aims.tex
+++ b/src/2-aims/2-aims.tex
@@ -16,3 +16,13 @@
 \section{Aim 4: Standardizing Kinematic Examination Protocols Using Novel Machine Learning Methods}
 \label{sec:aim4}
 \input{src/2-aims/aim4.tex}
+
+\section{Aim 5: Joint Track Auto Toolkit: An Open Source Framework for Model-Image Registraion}
+\label{sec:aim5}
+\input{src/2-aims/aim5.tex}
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Jensen-Lit-Review"
+%%% End:
