--- a/src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex
@@ -1,4 +1,4 @@
-Geometric primitives, such as points, are fundamental building blocks for representing shapes and objects in computer graphics. In this section, we will discuss how points can be represented in 2D and 3D space..
+Geometric primitives, such as points, are fundamental building blocks for representing shapes and objects in computer graphics. In this section, we will discuss how points can be represented in 2D and 3D space, along with the different mathematical operations that you can perform on those points.
 
 \subsubsection{2D and 3D Points}
 \label{sec:geometric-points}
@@ -11,7 +11,7 @@ In N-dimensional space, a point is represented as a set of N scalars, each repre
     \label{eq:point}
 \end{equation}
 
-Homogeneous coordinates provide a way to represent points with an additional scale factor, $\tilde{w}$. This allows us to perform rotations and translations simultaneously and successively using matrix multiplications. Homogeneous coordinates for a point in N-dimensional space are represented as a column vector with N+1 elements (\cref{eq:homog-point}. In most model-image registration applications, the scale factor $\tilde{w}$ is set to 1. When dealing with homogenous coordinates, $\mathbf{\tilde{x}} = \tilde{w}\mathbf{\bar{x}}$, where $\mathbf{\tilde{x}}$ is the scaled version of $\bar{\mathbf{x}}$, and $\bar{\mathbf{x}}$ is simply the original vector, $\mathbf{x}$ with a $1$ appended.
+Homogeneous coordinates provide a way to represent points with an additional scale factor, $\tilde{w}$. This allows us to perform rotations and translations simultaneously and successively using matrix multiplications. Homogeneous coordinates for a point in N-dimensional space are represented as a column vector with N+1 elements (\cref{eq:homog-point}). In most model-image registration applications, the scale factor $\tilde{w}$ is set to 1. When dealing with homogeneous coordinates, $\mathbf{\tilde{x}} = \tilde{w}\mathbf{\bar{x}}$, where $\mathbf{\tilde{x}}$ is the scaled version of $\bar{\mathbf{x}}$, and $\bar{\mathbf{x}}$ is simply the original vector, $\mathbf{x}$, with a $1$ appended.
 
 \begin{equation}
     \tilde{\mathbf{x}} = \begin{bmatrix}
@@ -139,9 +139,7 @@ To obtain inhomogeneous results, the resultant $\tilde{\mathbf{x}}'$ must be nor
 
 \subsubsection{3D Transformations}
 \label{sec:3d-transformations}
-Transformations in three dimensions are extremely similar to their two dimensional counterpart, except the dimensionality of each transformation is increased by one. However, three dimensional rotations introduce added complexity, due to multiple axes of rotation, and the non-commutativity of those rotations. We handle this by utilizing Euler angles \cite{groodJointCoordinateSystem1983}, which decomposes the final orientation of an object as the combination of rotations about the three coordinate axes. Each rotation about axis is represented with a matrix \cref{eq:euler-angles}, and the final rotation matrix is represented as the order of the rotations that produced it (e.g. Z-X-Y rotation). 
-
-% One aspect of 3D rotations that adds complexity is the possibility of multiple axes of rotation. This introduces the issue of non-commutativity, which means that the order in which rotations are applied matters. To handle this, we can use the concept of Euler angles, which represent the rotations as composite rotations about canonical axes. These rotations are represented by matrices (Eq. \ref{eq:euler-angles}). Note that these matrices are post-multiplied by each other to determine the final rotation matrix for object-centered rotations. Additionally, given a rotation matrix and the corresponding Euler rotations, it is possible to decompose the matrix into its composite rotations about the canonical axes.
+Transformations in three dimensions are extremely similar to their two dimensional counterpart, except the dimensionality of each transformation is increased by one. However, three dimensional rotations introduce added complexity, due to multiple axes of rotation, and the non-commutativity of those rotations. We handle this by utilizing Euler angles \cite{groodJointCoordinateSystem1983}, which decomposes the final orientation of an object as a combination of rotations about the three coordinate axes. Each rotation about an axis is represented with a matrix (\cref{eq:euler-angles}), and the final rotation matrix is represented as the order of the rotations that produced it (e.g. Z-X-Y rotation).
 
 \begin{equation}
     \begin{aligned}
@@ -184,7 +182,7 @@ For simplicity, we can also represent 3D rotations as an axis-angle decompositio
 \paragraph*{3D to 2D Projections}
 Geometric primitives, such as points, lines, and polygons, are the building blocks of computer graphics. These basic shapes can be transformed and combined in various ways to create more complex objects and scenes. In order to represent these 3D primitives and objects in 2D image space, we must apply transformations that manipulate their position, orientation, and other properties. By using these transformations, we can create the illusion of depth and spatial relationships on a flat display. Understanding how to work with primitives and transform them is crucial for creating a wide range of visual effects and graphics in computer graphics.
 
-In computer graphics, one of the most basic methods of projecting three-dimensional objects onto a two-dimensional image plane is an orthographic projection. This projection simply drops the depth component of the object and flattens it onto the image plane (Eq. \ref{eq:orthographic-proj}). This can be thought of as mimicking a camera with a long focal length, or when the depth of the object is shallow compared to its distance from the camera (also known as a weak perspective projection). In this equation, $\mathbf{p}$ represents a point in 3D space and $\mathbf{x}$ represents the projected point in 2D image space. The $\tilde{\cdot}$ still represents the point in homogeneous coordinates.
+In computer graphics, one of the most basic methods of projecting three-dimensional objects onto a two-dimensional image plane is an orthographic projection. This projection simply drops the depth component of the object and flattens it onto the image plane (\cref{eq:orthographic-proj}). This can be thought of as mimicking a camera with a long focal length, or when the depth of the object is shallow compared to its distance from the camera (also known as a weak perspective projection). In this equation, $\mathbf{p}$ represents a point in 3D space and $\mathbf{x}$ represents the projected point in 2D image space. The $\tilde{\cdot}$ still represents the point in homogeneous coordinates.
 
 \begin{equation}
     \tilde{\mathbf{x}} = \begin{bmatrix}
